# libretro_opengl_lua

./: CMakeLists.txt  README.md  render.lua
examples/: sample_text.lua
include/: globals.h
src/: lib.c  lib_strip.c  lib_strip_font.c  module_gl.c  sample_opengl_c.c
